# freecwmp

./: .gitignore  COPYING  README  configure.ac
ext/openwrt/config/: freecwmp
ext/openwrt/scripts/: defaults  freecwmp.sh
ext/openwrt/scripts/functions/: common  device_hosts  device_info  device_routing  device_users  lan_device  management_server  voice_service  wan_device  x_freecwmp_org
ext/openwrt/scripts/unused/: owsip_voice_service
ext/soap_msg_templates/: cwmp_inform_message.xml
ext/tmp/: .gitignore
src/: b64.c  b64.h  config.c  config.h  cwmp.c  cwmp.h  external.c  freecwmp.c  freecwmp.h  http.c  http.h  messages.h  time.c  time.h  ubus.c  ubus.h  xml.c  xml.h
src/cwmp/: acs.c  acs.h  cwmp.c  cwmp.h  device.c  device.h  external.c  external.h  local.c  local.h  messages.h
src/http/: b64.c  b64.h  http.c  http.h
src/mix/: time.c  time.h
src/ubus/: ubus.c  ubus.h
src/xml/: xml.c  xml.h
